# QuantumGates

./: .gitignore  CMakeLists.txt  Uruchamianie projektu w konsoli linuxa lub windowsa.txt  main  main.c  main.cpp
docs/: Doxyfile
docs/html/: annotated.html  classes.html  custom.css  dir_3c2d4af945300307a1a81eaabacd3270.html  dir_3c2d4af945300307a1a81eaabacd3270.js  dir_c12f25bda4a3db0aea979374a8632039.html  dir_c12f25bda4a3db0aea979374a8632039.js  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  globals_vars.html  index.html  matrixOperation_8h.html  matrixOperation_8h.js  matrixOperation_8h_source.html  menudata.js  namespacequantum.html  namespaces.html  navtreedata.js  navtreeindex0.js  quantumComputer_8h.html  quantumComputer_8h_source.html  quantumGateOperation_8h.html  quantumGateOperation_8h.js  quantumGateOperation_8h_source.html  quantumGate_8h.html  quantumGate_8h.js  quantumGate_8h_source.html  qubitOperation_8h.html  qubitOperation_8h.js  qubitOperation_8h_source.html  structquantum_1_1QuantumComputer-members.html  structquantum_1_1QuantumComputer.html  structquantum_1_1QuantumComputer.js
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  (+24 more)
docs/html_style/: layout.xml
docs/latex/: refman.tex
docs/man/: matrixOperation.h.3  quantum.3  quantumComputer.h.3  quantumGate.h.3  quantumGateOperation.h.3  quantum_QuantumComputer.3  quantum_headers.3  qubitOperation.h.3
lib/: complexMatrix.cpp  matrixOperation.cpp  matrixOperations.cpp  numericMatrix.cpp  quantum.cpp  quantumComputer.cpp  quantumGate.cpp  quantumGateOperation.cpp  qubitOperation.cpp  temporaryQubit.cpp
lib/headers/: complexMatrix.h  matrixOperation.h  matrixOperations.h  numericMatrix.h  quantumComputer.h  quantumGate.h  quantumGateOperation.h  qubitOperation.h  temporaryQubit.cpp  temporaryQubit.h
quantum/: CMakeLists.txt
quantum-tests/: CMakeLists.txt
quantum-tests/tests/: CMakeLists.txt  matrixOperationTest.cpp  quantumComputerTest.cpp  quantumGateOperationTest.cpp  quantumGateTest.cpp  qubitOperationTest.cpp  test.cpp  tests.cpp
quantum/headers/: matrixOperation.h  quantumComputer.h  quantumGate.h  quantumGateOperation.h  qubitOperation.h
quantum/sources/: matrixOperation.cpp  quantumComputer.cpp  quantumGate.cpp  quantumGateOperation.cpp  qubitOperation.cpp
(+3 files in other folders)
